--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,12 @@
 	    <artifactId>json</artifactId>
 	    <version>20190722</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpclient</artifactId>
+	    <version>4.5.10</version>
+	</dependency>
+
   </dependencies>
 </project>
